1999-06-13  Roland McGrath  <roland@baalperazim.frob.com>

	* lookup.c (diskfs_get_directs): Add cast to silence warning.

1999-01-23  Roland McGrath  <roland@baalperazim.frob.com>

	* main.c (main): Use diskfs_init_main.

1999-01-22  Roland McGrath  <roland@baalperazim.frob.com>

	* rr.c (rrip_work): Remove makedev macro definition.

1998-12-27  Roland McGrath  <roland@baalperazim.frob.com>

	* inode.c (diskfs_set_statfs): Remove __ from struct statfs members.
	Use bzero first instead of setting individual fields to zero.

1998-12-21  Mark Kettenis  <kettenis@phys.uva.nl>

	* inode.c (diskfs_set_statfs): Fill in statfs members with
	sensible values.

Wed Oct 28 22:52:04 1998  Joel N. Weber II  <devnull@methedrine.ai.mit.edu>

	* inode.c (read_disknode): Use FSTYPE_ISO9660.

1998-09-04  Roland McGrath  <roland@baalperazim.frob.com>

	* lookup.c (diskfs_lookup_hard): Fix defn with `const'.
	(diskfs_direnter_hard): Likewise.
	(diskfs_get_directs): Use `const' for local var NAME.
	* inode.c (diskfs_set_translator): Fix defn with `const'.

1997-09-22  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (diskfs_append_args): New function.

1997-09-19  Miles Bader  <miles@gnu.ai.mit.edu>

	* rr.h (GNUEXT_ID): Make value a string.
	* rr.c (rrip_work): ER->lenid should be ER->len_id.
	Remove unused variable.

1997-09-18  Miles Bader  <miles@gnu.ai.mit.edu>

	* inode.c (read_disknode): RR should be RL.
	Assign 0's type-correctly to NP->dn->translator and ->translen.
	(diskfs_node_norefs): The translator field is in NP->dn, not NP.

Tue Sep 16 15:34:21 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* rr.c (gnuext_live): New variable.
	(rrip_work): Comprehend AU, TR, MD, and FL, all as GNU
	extensions.  Recognize GNU extension id field when processing ER
	fields.
	(release_rrip): Free RR->trans if it's live.
	* inode.c (read_disknode): Interpret and install the values set by
	AU, TR, MD, and FL extensions.
	(diskfs_node_norefs): Free NP->translator if it's set.