@@ -1,3 +1,8 @@
+1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* lookup.c (diskfs_get_directs): Use munmap instead of
+	vm_deallocate. 
+
 1999-06-13  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* lookup.c (diskfs_get_directs): Add cast to silence warning.
